Bug fix: program not running when ascdesc=false and presh=false

--- a/simParams.ini
+++ b/simParams.ini
@@ -8,12 +8,12 @@ LatticeShape2 = 1
 LatticeShape3 = 1 		; ... etc, until LatticeShaped (d is the dimensionality, hard-coded)
 				; Current version has d=4. Setting last dimension(s) to 1 is equivalent to
 				; working in a lower-dimensional subspace
-NumSites = 32			; This value replace any missing value in LatticeShapeN
+NumSites = 8			; This value replace any missing value in LatticeShapeN
 				; (if LatticeShapeN are all 0 or missing, lattice shape will be NumSites^d)
-K = 30.74
-n = 3.7
-Tau0 = 7891
-Omega = 3.14
+K = 1
+n = 1
+Tau0 = 1
+Omega = 1
 Beta = 2
 UsePBC = true
 RateAvgType = 1 		; Avg types: 0 - aritmetic, 1 - harmonic, 2 - geometric
@@ -33,12 +33,12 @@ SiteBasedNoise = false 		; If false, each single coupling constant alpha_ij is i
 				;          by taking the average of the two site-based parameters
 SBNoiseAvgType = 2		; Type of averaging performed if SiteBasedNoise == true
 				; See below for average types
-AlphaNoiseType = 5		; See Noise types below
-NormGlassiness = 0.7		; Corresponds to g/gmax. Only used if AlphaFromGlassiness==true
-AlphaAverage = 0.0047 		; Only used if AlphaFromGlassiness==false
-AlphaParam0 = 0.18
+AlphaNoiseType = 1		; See Noise types below
+NormGlassiness = 0.1		; Corresponds to g/gmax. Only used if AlphaFromGlassiness==true
+AlphaAverage = 3.428 		; Only used if AlphaFromGlassiness==false
+AlphaParam0 = 0.01
 AlphaParam1 = 0.0		;... etc, until AlphaParamN
-AlphaParamFile = alphaMap.raw	; If this parameter is defined, AlphaParamN above are disregarded
+;AlphaParamFile = alphaMap.raw	; If this parameter is defined, AlphaParamN above are disregarded
 				; and parameters are loaded from binary file specified here
 				; If a relative path is specified, root folder is the output folder
 				; Binary file has the same format as a raw file saved from the analysis,
@@ -92,17 +92,16 @@ SimNumber = 1			; number of simulations to be performed in parallel (for statist
 GammaListFromFile = false 	; true if you want to load a specific list of gamma values from file
 ;GammaListFile = GammaList.txt	; Text file with a list of gammas, one per line
 				; If a relative path is specified, root folder is the output folder
-MinGamma = 0.01
-MaxGamma = 0.1
+MinGamma = 1
+MaxGamma = 100
 PPDGamma = 10
-RunPreshear = true
+RunPreshear = false
 RunAscDesc = false
 ForceMeanField = false		; true to couple local rates to the average rate (mean field)
 				; false (default) to couple rates between neighbor sites
 
 [output]
-OutFolder = D:\steaime\Documents\Research\Projects\SoftGlasses\Ising\out\v4\LUDOX45\run24_copyAlphasInit\
-				; Output folder, end with '\'
+OutFolder = D:\temp\Ising\      ; Output folder, end with '\'
 PrintOutput = true		; If false: disable print output to screen
 SaveRateHistogram = true	; Save histogram of local rates (one file per simulation, one column per gamma)
 SaveAlphaHistogram = true	; Save histogram of coupling constants (one file for all simulations)
